--- a/Phase-4/Assessment/kitchenstory/src/app/app.component.html
+++ b/Phase-4/Assessment/kitchenstory/src/app/app.component.html
@@ -1,15 +1,15 @@
 <nav class="navbar navbar-expand-lg navbar navbar-light" style="background-color:darkcyan">
-    <a class="navbar-brand" style="color:chartreuse">KitchenStory</a>
+    <a class="navbar-brand" style="color:chartreuse;">KitchenStory</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active" routerLink="adminlogin"  style="font-size: large;">Admin Login</a>
+          <a class="nav-link" routerLinkActive="active" routerLink="adminlogin">Admin Login</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" routerLinkActive="active" routerLink="userlogin" style="font-size: large;">User Login</a>
+            <a class="nav-link" routerLinkActive="active" routerLink="userlogin"  >User Login</a>
         </li>
       </ul>
     </div>
