--- a/Phase-4/Assessment/kitchenstory/src/app/forgetpassword/forgetpassword.component.html
+++ b/Phase-4/Assessment/kitchenstory/src/app/forgetpassword/forgetpassword.component.html
@@ -1,5 +1,45 @@
-<div class="box" [ngClass]="{boxRed:boxColor=='red', boxGreen:boxColor=='green'}">
-    <input type="text" #myInput placeholder="{{placeholderText}}">
-    <button (click)="onCreate(myInput)">Create</button>
-    <div class="count" *ngIf="count">Total Count: <strong>{{count}}</strong></div>
-  </div>
+<div class="jumbotron">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6 offset-md-3">
+				<h2 style="color:blueviolet">Admin Reset Form</h2><hr>
+				<form [formGroup]="adminloginForm" (ngSubmit)="onSubmit()">
+                    <div class="form-group">
+                        <label>Email</label>
+                        <input type="email" [(ngModel)]="adminData.email" formControlName="email" class="form-control"
+                        [ngClass]="{'is-invalid':submitted && f['email'].errors}"/>
+
+                        <div *ngIf="submitted && f['email'].errors" class="invalid-feedback">
+                            <div *ngIf="f['email'].errors['required']">
+                                Email can not be Empty
+                            </div>
+                            <div *ngIf="f['email'].errors['email']">
+                                Email Id is not Valid
+                            </div>
+                        </div>
+					</div>
+                    <div class="form-group">
+                        <label>New-Password</label>
+                        <input type="password" [(ngModel)]="adminData.password" formControlName="password" class="form-control"
+                        [ngClass]="{'is-invalid':submitted && f['password'].errors}"/>
+
+                        <div *ngIf="submitted && f['password'].errors" class="invalid-feedback">
+                            <div *ngIf="f['password'].errors['required']">
+                                Password can not be Empty
+                            </div>
+                            <div *ngIf="f['password'].errors['minlength']">
+                                Password can not be less than 8 characters
+                            </div>
+                          
+                        </div>
+					</div>
+                    <div class="form-group">
+                        <button class="btn btn-primary">Reset Password</button>               
+                    </div>             
+				</form>
+                
+               
+			</div>
+		</div>
+	</div>
+</div>
