--- a/Phase-4/Assessment/kitchenstory/src/app/app.component.html
+++ b/Phase-4/Assessment/kitchenstory/src/app/app.component.html
@@ -1,4 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar navbar-light" style="background-color:darkcyan">
+    <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-cutlery" style="color:chartreuse;"></span></a>
     <a class="navbar-brand" style="color:chartreuse;">KitchenStory</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
